--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@supabase/supabase-js": "^1.35.3",
+    "axios": "^0.27.2",
+    "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
